Added user.signupDate logic

--- a/src/main/resources/ApplicationResources_es.properties
+++ b/src/main/resources/ApplicationResources_es.properties
@@ -140,6 +140,7 @@ user.enabled=Habilitada
 user.accountExpired=Caducada
 user.accountLocked=Bloqueada
 user.credentialsExpired=Contrase\u00f1a Caducada
+user.signupDate=Fecha de Alta
 
 # -- user list page --
 userList.title=Listado de Usuarios
